#pragma once

// Base component class - components are just data containers
struct Component
{
    virtual ~Component() = default;
};

